# SparklingSnakes

./: LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  requirements-env.txt  requirements-venv.txt  setup.cfg  sparkling_snakes.toml  start-spark.sh
alembic/: env.py
alembic/versions/: 01779ca112b4_initialize_metadata_table.py
dockerfiles/pyspark/: Dockerfile
dockerfiles/sparkling_snakes/: Dockerfile
sparkling_snakes/: consts.py  exceptions.py  main.py  utils.py
sparkling_snakes/api/: models.py
sparkling_snakes/api/models/schemas/: base.py  tasks.py
sparkling_snakes/api/routes/: api.py  tasks.py
sparkling_snakes/db/: generic_db.py  pgsql_db.py
sparkling_snakes/db/models/pgsql/: metadata.py
sparkling_snakes/helpers/: app_config.py  app_logging.py  filesystem_operations.py  pyspark.py  s3_helper.py
sparkling_snakes/processor/: data_models.py  exceptions.py  file_processor.py  pyspark_functions.py  types.py
sparkling_snakes/services/: tasks.py
test/db/: test_pgsql_db.py
test/helpers/: test_filesystem_operations.py
