[metadata]
name = sparkling_snakes
version = 1.0.0
description = Package for PySpark-based file metadata harvesting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pakunek/SparklingSnakes
author = Filip Płachecki
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:
install_requires =
    psycopg2-binary==2.9.5
    pyspark==3.3.1
    fastapi==0.88.0
    toml==0.10.2
    boto3==1.26.22
    sqlalchemy==1.4.44

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    sparkling-snakes-processor = sparkling_snakes.main:main

[flake8]
max-line-length = 120
